--- a/Firmware/PlatformIO/MIDIViolina/platformio.ini
+++ b/Firmware/PlatformIO/MIDIViolina/platformio.ini
@@ -4,7 +4,7 @@
 ;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
-;;esp32doit-devkit-v1
+;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
@@ -13,7 +13,10 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 build_type = release
-lib_deps = fortyseveneffects/MIDI Library@^5.0.2
+lib_deps = 
+	;fortyseveneffects/MIDI Library@^5.0.2
+	tttapa/Control Surface@^1.2.0-4
+lib_ignore = MIDIUSB, Audio
 debug_port = COM3
 
 [platformio]
